--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 ul {
@@ -33,8 +34,9 @@ a {
     margin-top: 200px;
 }
 h1 {
-    font-size: 60px;
-    margin: 0;
+   
+    padding: 45px;
+    text-align: center;
 }
 h2 {
     font-size: 25px;
@@ -61,16 +63,16 @@ header {
     margin: auto    ;
 }
 
-/*Arranca sección sobre mi */
+/*Sección sobre mi */
 
 h3 {
     text-align: center;
     font-size: 55px;
-    font-weight: normal;
+    font-weight: bold   ;
 }
 .contenedor-sobremi {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -79,10 +81,15 @@ h3 {
 }
 
 .contenedor-parrafo-y-boton p {
-    font-size: 18px;
+    font-size: 20px;
+    margin-top: 4%;
+}
+.contenedor-parrafo-y-boton a {
+    margin-top: 20px;
+    display: inline-block;
 }
 
-
+/*seccion servicios*/
 
 .contenedor-servicios {
     display: flex;
@@ -90,7 +97,7 @@ h3 {
     justify-content: space-around;
 }
 .servicio {
-    width: 23%;
+    width: 25%;
     padding: 38px;
     border-radius: 10px;
     margin-bottom: 40px;
@@ -104,7 +111,187 @@ h3 {
 }
 .servicio h4 {
     font-size: 30px;
+    margin: 0;
 }
 .servicio img {
     float: right;
+}
+.servicio p {
+    font-size: 18px;
+    height: 200px;
+}
+
+
+span {
+    font-size: 70px;
+    color: royalblue;
+}
+.owl-nav {
+    text-align: center;
+}
+.contenedor-porque {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+
+}
+.contenedor-porque h4 {
+    margin: 0;
+    font-size: 20px;
+}
+.contenedor-porque p  {
+    font-size: 16px;
+    line-height: 28px;
+}
+.porque-singular {
+    width: 28%;
+}
+#blog {
+    background: #F9FAFC;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.contenedor-publicaciones {
+    display: flex;
+    justify-content: space-around;
+}
+.publicacion {
+    width: 30%;
+    box-shadow: 1px 1px 14px #ccc;
+    padding-bottom: 20px;
+}
+#blog img {
+    width: 100%;
+} 
+
+#blog h4 {
+    font-size: 23px;
+    margin: 0;
+    padding: 20px;
+}
+#blog p {
+    color: #5a6169;
+    line-height: 24px;
+    font-size: 16px;
+    padding: 10px 20px 20px 20px;
+    margin: 0;
+}
+#blog a {
+    display: inline-block;
+    margin-left: 20px ;
+}
+.publicacion-segunda img { 
+    height: 270px;    
+}
+#que-esperas {
+    background: linear-gradient(rgba(84,93,220,94), rgba(96,171,245,.9));
+    text-align: center;
+    padding: 50px 0 50px 0;
+}
+
+#que-esperas h3{
+    font-size: 23px;
+    color: #fff;
+    margin-bottom: 40px;
+}
+#que-esperas a {
+    padding: 15px 45px;
+    font-weight: bold;
+    transition: 1s;
+}
+#que-esperas a:hover {
+    color: black;
+    transition: 1s;
+}   
+#whatsapp a {
+    background: none;
+    position: fixed;
+    top: 85%;
+    right: 1%;
+}
+
+.menu-icon{ 
+    display: none;
+}
+
+@media (max-width: 800px) {
+    nav { 
+        position: absolute;
+        top: 70px;
+        left: 0px;
+        background: #5cb8ff;
+        width: 100%;
+        display: none;
+    }
+
+    nav .lista {
+        flex-direction: column;
+        display: flex;
+    }
+    .menu-icon {
+        display: block;
+        width: 25px;
+    }
+    .titular {
+        margin-top: 54px;
+    }
+    h1 {
+        font-size: 49px;
+        padding: 15px;
+    }
+    h2 {
+        font-size: 19px;
+        margin-top: auto;
+    }
+    .contenedor-sobremi {
+        flex-direction: column;
+    }
+    .contenedor-parrafo-y-boton {
+        width: 90%;
+    }
+    .contenedor-servicios {
+        flex-direction: column;
+    }
+    .servicio {
+        width: 72%;
+        margin: auto;
+        margin-bottom: 15px;
+    }
+    h3 {
+        font-size: 46px;
+    }
+    .contenedor-porque {
+        flex-direction: column;
+    }
+    .porque-singular {
+        width: 95%;
+    }
+    .contenedor-publicaciones {
+        flex-direction: column;
+    }
+    .publicacion {
+        width: 85%;
+        margin: auto;
+    }
+    .imagen-sobremi {
+        width: 80%;
+    }
+}
+@media (min-width: 700px) and (max-width: 900px) {
+    header {
+        height: 53vh;
+    }
+    h1 {
+        font-size: 49px;
+        padding: 15px;
+}
+    .titular {
+        margin-top: auto;
+    }
+    .servicio {
+        width: 44%;
+    }
+    .publicacion {
+        width: 62%;
+    }
 }
